# emr

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: benchmark.hpp  console_output_formatter.hpp  csv_output_formatter.hpp  guard_ptr_benchmark.hpp  hash_map_benchmark.hpp  list_benchmark.hpp  main.cpp  marked_ptr.natvis  output_formatter.hpp  process_memory.cpp  process_memory.hpp  queue_benchmark.hpp  test_execution.cpp  test_execution.hpp
include/: debug_helper.hpp  hash_map.hpp  list.hpp  queue.hpp
include/emr/: acquire_guard.hpp  debra.hpp  debra_impl.hpp  dummy.hpp  epoch_based.hpp  epoch_based_impl.hpp  hazard_pointer.hpp  hazard_pointer_impl.hpp  lock_free_ref_count.hpp  lock_free_ref_count_impl.hpp  new_epoch_based.hpp  new_epoch_based_impl.hpp  quiescent_state_based.hpp  quiescent_state_based_impl.hpp  stamp_it.hpp  stamp_it_impl.hpp
include/emr/detail/: aligned_object.hpp  allocation_tracker.hpp  backoff.hpp  concurrent_ptr.hpp  deletable_object.hpp  guard_ptr.hpp  marked_ptr.hpp  orphan.hpp  perf_counter.hpp  thread_block_list.hpp
test/: concurrent_ptr_test.cpp  debra_test.cpp  epoch_based_test.cpp  hash_map_test.cpp  hazard_pointer_test.cpp  list_test.cpp  lock_free_ref_count_test.cpp  marked_ptr_test.cpp  new_epoch_based_test.cpp  queue_test.cpp  quiescent_state_based_test.cpp  stamp_it_test.cpp
